# zpad

./: .gitignore  README.md  part1.ipynb  part2.ipynb
lab2/: README.md  requirements.txt
lab3/: Lab3.ipynb  README.md
lab4/: README.md  lab4.py
lab5/: README.md  app.py
lab6/: CMakeLists.txt  README.md  build.sh  preinstall.sh  run.sh
lab6/include/: CameraProvider.hpp  Display.hpp  FrameProcessor.hpp  KeyProcessor.hpp
lab6/src/: CameraProvider.cpp  Display.cpp  FrameProcessor.cpp  KeyProcessor.cpp  main.cpp
lab7/: CMakeLists.txt  FaceDetector.hpp  README.md  build.sh  main.cpp  preinstall.sh  run.sh
